--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     
     <header>
         <p class="created-by">
-            Created by <a href="#" target="_blank">Andrew Charlebois</a>
+            Created by <a href="http://andrewchar.github.io/portfolio/" target="_blank">Andrew Charlebois</a>
         </p>
         <div class="logo-container">
             <img  class="logo img-responsive center-block" src="resource/img/logo.png">
